# ROS2-Yolov8N

./: README.md  pi_tracker.py
ros2_pi_tracker/: README.md  package.xml  setup.cfg  setup.py
ros2_pi_tracker/launch/: pi_tracker.launch.py
ros2_pi_tracker/ros2_pi_tracker/: pi_tracker_adapter.py  tracker_node.py
