<package format="2">
  <name>ros2_pi_tracker</name>
  <version>0.1.0</version>
  <description>ROS2 wrapper for the Pi Tracker functionality using YOLO for object tracking.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  
  <test_depend>pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>