[metadata]
name = ros2_pi_tracker
version = 0.1.0
description = ROS2 wrapper for Pi Tracker functionality using YOLO
author = SaulP1
license = MIT

[options]
packages = find:
install_requires =
    opencv-python
    ultralytics
    rclpy
    sensor_msgs
    std_msgs

[options.packages.find]
where = ros2_pi_tracker/ros2_pi_tracker

[options.entry_points]
console_scripts =
    tracker_node = ros2_pi_tracker.tracker_node:main

[options.extras_require]
dev =
    setuptools
    wheel
    flake8
    black
    isort